# chatbot-pydanticai-template

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
chatbot/: __init__.py  agent.py  app.py  config.py
chatbot/extension_points/: __init__.py  tools.py
node/: layout.js  package-lock.json  package.json  validate.js
src/bpmn_pipeline/: __init__.py  app.py  config.py  generator.py  judge.py  layout.py  models.py  pipeline.py  prompts.py  validator.py
src/bpmn_pipeline/prompts/: generator.txt  judge.txt
src/bpmn_pipeline/static/: index.html
src/chatbot/: agent.py  app.py  config.py  deepagent.py  memory.py
src/chatbot/extension_points/: tools.py  vector_store.py
static/: README.md  chat.js  index.html
tests/: crazybuilder.bpmn  crazybuilder.txt  output_test.bpmn  test_generator.py  test_judge.py
